tests/checker/fail/string_invalid_escape.can
Unit => Program {
    "bad escape \q".print()
}
